<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Img_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/pikachu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unblast"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/Img_profile"
        app:layout_constraintTop_toTopOf="@id/Img_profile"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_hrs"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        android:layout_marginTop="5dp"
        />
    <ImageView
        android:id="@+id/img_public"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_margin="3dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/globeearth"
        app:layout_constraintBottom_toBottomOf="@id/tv_time"
        app:layout_constraintStart_toEndOf="@id/tv_time"
        app:layout_constraintTop_toTopOf="@id/tv_time"
        />
    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/menudots"
        app:layout_constraintTop_toTopOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tv_post_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/Img_profile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:autoLink="web"
        android:textColorLink="@color/blue"
        />
    <ImageView
        android:id="@+id/Img_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/pic"
        app:layout_constraintTop_toBottomOf="@id/tv_post_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="8dp"
        />
    <ImageView
        android:id="@+id/img_post_likes"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/like"
        app:layout_constraintTop_toBottomOf="@id/Img_post"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@id/Img_post"
        />
    <TextView
        android:id="@+id/likesNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/img_post_likes"
        app:layout_constraintTop_toTopOf="@id/img_post_likes"
        android:layout_marginStart="3dp"
        />
    <TextView
        android:id="@+id/tv_share_numbres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_share"
        app:layout_constraintTop_toBottomOf="@id/Img_post"
        app:layout_constraintTop_toTopOf="@id/img_post_likes"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_mini_profile_picture"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/pikachu"
        app:layout_constraintTop_toTopOf="@id/tv_share_numbres"
        app:layout_constraintTop_toBottomOf="@id/tv_share_numbres"
        app:layout_constraintStart_toEndOf="@id/tv_share_numbres"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        />
    <ImageView
        android:id="@+id/img_downarrow"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/downarrow"
        app:layout_constraintStart_toEndOf="@id/img_mini_profile_picture"
        app:layout_constraintTop_toTopOf="@id/img_mini_profile_picture"
        android:layout_marginStart="3dp"
        />
    <ImageView
        android:id="@+id/img_likebutton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/like1"
        app:layout_constraintTop_toBottomOf="@id/img_post_likes"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/img_post_likes"
        android:layout_marginStart="32dp"
        />
    <TextView
        android:id="@+id/tv_Like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/img_likebutton"
        app:layout_constraintTop_toTopOf="@id/img_likebutton"
        app:layout_constraintTop_toBottomOf="@id/img_likebutton"
        android:layout_marginTop="1dp"
        android:layout_marginStart="4dp"
        />
    <ImageView
        android:id="@+id/img_commentbutton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/coment"
        app:layout_constraintStart_toEndOf="@id/tv_Like"
        app:layout_constraintTop_toTopOf="@id/img_likebutton"
        android:layout_marginStart="56dp"
        />
    <TextView
        android:id="@+id/tv_Comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/img_commentbutton"
        app:layout_constraintTop_toTopOf="@id/img_commentbutton"
        app:layout_constraintStart_toEndOf="@id/img_commentbutton"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        />
    <ImageView
        android:id="@+id/img_sharebutton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/share"
        app:layout_constraintStart_toEndOf="@id/tv_Comment"
        app:layout_constraintTop_toTopOf="@id/img_commentbutton"
        android:layout_marginStart="56dp"
        />
    <TextView
        android:id="@+id/Share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/share"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/img_sharebutton"
        app:layout_constraintTop_toTopOf="@id/img_sharebutton"
        app:layout_constraintBottom_toBottomOf="@id/img_sharebutton"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>